fixed bug with width slider, added auto color mode,some styles on small devices, first test version

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -188,7 +188,7 @@ header {
     }
   }
   &__svgScene {
-    margin-bottom: 150px;
+    margin-bottom: 50px;
     position: relative;
     top: -50px;
   }
@@ -280,6 +280,7 @@ header {
   }
   .title {
     font-size: 3.2rem;
+    text-align: center;
   }
   &__frame {
     overflow: hidden;
@@ -330,6 +331,7 @@ header {
       &__description {
         font-weight: 300;
         font-size: 1.3rem;
+        line-height: 1.3;
       }
     }
     &__slider {
@@ -371,6 +373,7 @@ header {
 
 // CONTACT SECTION
 .contactSection {
+  text-align: center;
   min-height: 60vh;
   padding: 70px 0;
   display: flex;
@@ -381,7 +384,7 @@ header {
     font-size: 3.2rem;
   }
   &__form {
-    padding: 0 50px 0 50px;
+    padding: 0 50px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -618,14 +621,16 @@ footer {
   }
   .contactSection {
     &__form {
+      padding: 0 20px;
       width: 80vw;
       &__inputs__singleInput {
         flex: 1;
       }
     }
   }
-  .aboutSection__svgScene {
-    // width: 400px;
-    // margin-top: 200px;
+}
+@media screen and(max-width:360px) {
+  .projectsSection__frame__projectInfo {
+    width: 200px;
   }
 }
